// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reader.Footer component adds a line break between lines 1`] = `
<footer
  className="footer-reader"
>
  <div
    className="container"
  >
    <div
      className="rel"
    >
      <section
        className="colophon"
      >
        <i
          className="manicon manicon-manifold-logo"
        />
        <div>
          <p>
            <span>
              line one
              <br />
            </span>
            <span>
                      line two
            </span>
          </p>
        </div>
        <br />
      </section>
    </div>
  </div>
</footer>
`;

exports[`Reader.Footer component renders correctly 1`] = `
<footer
  className="footer-reader"
>
  <div
    className="container"
  >
    <div
      className="rel"
    >
      <section
        className="colophon"
      >
        <i
          className="manicon manicon-manifold-logo"
        />
        <div>
          <p>
            <span>
              All rights reserved
            </span>
          </p>
        </div>
        <br />
      </section>
    </div>
  </div>
</footer>
`;
